# intrinsic-arap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: iarap.hpp  iarap_data.hpp  laplace.hpp  segments.hpp
meshes/: spike.ply
src/: iarap.cpp  laplace.cpp  segments.cpp
viewer/: main.cpp  non-conforming-dual.cpp  non-conforming-dual.hpp  screenshot.hpp  vis_intrinsic_edges.cpp  vis_intrinsic_edges.hpp
